syntax = "proto3";

package JUB.Proto.Common;
import "google/protobuf/any.proto";

option java_package = "com.jubiter.sdk.proto";
option java_outer_classname = "CommonProtos";
option objc_class_prefix = "CommonProtos";

// bip32_path
message Bip32Path {
    bool change = 1;
    uint64 addressIndex = 2;
}

// device info
message DeviceInfo {
    string sn = 1;
    string label = 2;
    string bleVersion = 3;
    string firmwareVersion = 4;
    uint32 pinRetry = 5;
    uint32 pinMaxRetry = 6;
}

// result with int return value
message ResultInt {
    uint64 stateCode = 1;
    uint32 value = 2;
}

// result with string return value
message ResultString {
    uint64 stateCode = 1;
    string value = 2;
}

// result with DeviceInfo return value
message ResultAny {
    uint64 stateCode = 1;
    repeated google.protobuf.Any value = 2;
}

// mnemonic strength
enum ENUM_MNEMONIC_STRENGTH {
    STRENGTH128 = 0;
    STRENGTH192 = 1;
    STRENGTH256 = 2;
}

// curves
enum CURVES {
    secp256k1 = 0;
    ed25519 = 1;
    nist256p1 = 2;
}